# muggins_calculator

./: .eslintrc.json  .gitignore  232.0c000d62613e8b0f.js  232.0c000d62613e8b0f.js.map  265.7d57d658350d0767.js  265.7d57d658350d0767.js.map  3rdpartylicenses.txt  47.a77b4e54f0d57a94.js  47.a77b4e54f0d57a94.js.map  Dockerfile  README.md  angular.json  angular_coverage_plugin.js  build.sh  devenv.sh  gulpfile.ts  icon.xcf  index.html  jest.config.js  jest.config.json  karma.conf.js  lcov.info  main.9db68cadaddecfa0.js  ngsw.json  package-lock.json  package.json  playwright.config.ts  polyfills.85989a3de95b0578.js  polyfills.85989a3de95b0578.js.map  runtime.7fc8839bc61d9c96.js  runtime.7fc8839bc61d9c96.js.map  styles.089d80852131a6c5.css  styles.089d80852131a6c5.css.map  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
.github/workflows/: build.yml  publish.yml
build_plugins/: build_actions.js  dev_build_plugin.js  prod_build_plugin.js
lib/: fs.utils.ts  istabul-utils.ts
playwright/: const.ts  global-setup.ts  global-teardown.ts  utils.ts
playwright/tests/: application.spec.ts  calculator.spec.ts  calculator.utils.ts  configuration.spec.ts  configuration.utils.ts
solver_rust_wasm/: .gitignore  Cargo.toml  LICENSE
solver_rust_wasm/src/: lib.rs
solver_rust_wasm/tests/: expected_results.json  lib.rs
src/: 404.html  index.html  main.ts  manifest.webmanifest  polyfills.ts  setup-jest.ts  setupJest.ts  stat_generator.ts  styles.scss  test.ts  types.d.ts
src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  color-scheme.service.spec.ts  color-scheme.service.ts  configuration.service.spec.ts  configuration.service.ts  (+15 more)
(+67 files in other folders)
